# gnn-recommender

./: .gitignore  .pre-commit-config.yaml  Constants.py  Dockerfile  LICENSE  Main.py  README.md  docker-compose.yml  main.py  preprocess_kuairand_kgp.py  preprocess_zvuk_kgp.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: linter.yml
Data/__MACOSX/: ._Data
Data/data/zvuk/: info.py  kg_final.txt
app/: compare.py  embeddings.py  graph_viz.py  recommend.py
baseline/: dataloader.py  main.py  model.py  parse.py  utils.py
baseline/train_logs/: kuairand_sigformer.txt  sberzvuk_sigformer.txt
code_results/leave-n-out/beauty/: addthp_beautyv2_addce.ipynb  baseline-beauty.ipynb  diffgat-thp-extra-task-beauty.ipynb  diffgatgraphmodel-beauty.ipynb  emogat-beauty.ipynb  emosage-all-negatives-beauty.ipynb  emosage-thp-beauty.ipynb
code_results/leave-n-out/books/: addthp_booksv2_addce.ipynb  baseline-books.ipynb  (+5 more)
common/: test.py  utils.py
common/config/: __init__.py  parser.py
common/dataset/: __init__.py  dataset.py  preprocess.py
data/: info.py  metrics_mock.json
data/Kuairand-1k/: Kuairand-1k_test.txt
data/SberZvuk/: info.txt  prepare.py
data/Zvuk/: Zvuk_test.txt  Zvuk_tune.txt
docs/: ml_system_design_doc.md
eda/: Statistics_KuaiRand.ipynb  zvuk-dataset.ipynb
model/: Models.py  app.py  dataloader.py  main.py  model.py  parse.py  test.js
model/HGC/: HGC.py
model/THP/: THP.py
model/hGCN/: hGCN.py
model/transformer/: Layers.py  Modules.py  SubLayers.py
model/transformerls/: attentionls.py  lstransformer.py
model_checkpoints/SberZvuk/: model.pth
modules/recommender/: KGAT.py  MF.py  __init__.py
modules/sampler/: __init__.py  kgpolicy.py
utils/: Dataset.py  Utils.py  cal_pairwise.py  metric.py  test.py
(+14 files in other folders)
