[tool.poetry]
name = "gnn-recommender-sigformer"
version = "0.1.0"
description = ""
authors = ["Anna Sidorova <anna.pav.sidorova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.20.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.13.1"
torch = "^2.5.1"
torchsparsegradutils = "^0.1.3"
torch_geometric = "^2.6.1"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
prometheus-fastapi-instrumentator = "^7.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"
black = "^23.9.1"
pre-commit = "^4.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]

[tool.black]
line-length = 99
target-version = ["py310"]
