[project]
name = "kgpolicy-cuda"
version = "0.1.0"
description = ""
authors = [
    {name = "Tishin Roman"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8, <3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.0.0+cu118.html"
priority = "primary"
