[project]
name = "nfarec-cuda"
version = "0.1.0"
description = ""
authors = [
    {name = "Tishin Roman"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
ruff = "^0.9.4"
